--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@paypal/react-paypal-js": "^8.8.2",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.11.3",
+    "next-sitemap": "^4.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-bootstrap-icons": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-facebook-login": "^4.1.1",
     "react-multi-carousel": "^2.6.5",
     "react-player": "^2.16.0",
@@ -37,7 +41,8 @@
     "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build --openssl-legacy-provider",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate:sitemap": "node sitemap-generator.js"
   },
   "eslintConfig": {
     "extends": [
