--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-facebook-login": "^4.1.1",
+    "react-h5-audio-player": "^3.10.0",
     "react-multi-carousel": "^2.6.5",
     "react-player": "^2.16.0",
     "react-rating-stars-component": "^2.2.0",
